Fixed text overlap in about us

--- a/About us.css
+++ b/About us.css
@@ -106,7 +106,7 @@ body {
       position: absolute;
       top: 45%;
       left: 85%;
-      transform: translate(-50%, -50%);
+      transform: translate(-515%, -50%);
       color: #00383d;
       font-size: 19px;
       text-align: center;
